--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,12 @@ edition = "2021"
 author = "Claudia Richoux <c@laudiacay.cool>"
 license = "MIT OR Apache-2.0"
 description = "A simple library to intercept a Reader or Writer and print it to something on its way in or out. Useful for debugging."
+repository = "https://github.com/laudiacay/printio"
+readme = "README.md"
+keywords = ["debug", "print", "io", "reader", "writer"]
+categories = ["development-tools::debugging"]
+documentation = "https://docs.rs/printio"
+homepage = "https://github.com/laudiacay/printio"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
